# gpu-telemetry-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: issue_report_template.md  test_matrix.md  troubleshooting_runbook.md  validation_report_template.md
examples/: example_results.json  example_telemetry.csv  example_validation_report.md  example_validation_summary.json
scripts/: collect_system_info.sh  run_benchmark.sh
src/gpu_telemetry_benchmark/: __init__.py  benchmark.py  report.py  system_info.py  telemetry.py  utils.py  workloads.py
tests/: test_report.py  test_system_info.py  test_workloads.py
