[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-telemetry-benchmark"
version = "0.1.0"
description = "GPU benchmarking and telemetry logger for AI/HPC hardware validation workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sakeeb" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
nvml = ["pynvml>=11.5"]

[project.scripts]
gpu-telemetry-benchmark = "gpu_telemetry_benchmark.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
